# buildup

./: .gitignore  CMakeLists.txt  G4History.macro  Run.mk  analysis.ipynb  buildup.cc  collect.py  init_vis.mac  run.mac  run1.mac  singlerun.mac  vis.mac
hopkins/: 1.csv  2.csv  3.csv  4.csv  Co1d.csv  Co2d.csv  Csd.csv  Mnd.csv  dist.csv
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
thesis/: Makefile  main.tex  ref.bib
thesis/body/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  method.tex  result.tex
thesis/figures/: bdist.pgf  benergy.pgf  bthick.pgf  eatten.pgf  latten.pgf
thesis/setup/: package.tex
